start Scylla
